Modified header New icon Added content boxes section Added new icons Changes to responsive behavior of chrome button

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="container header-footer-container">
-            <img src="icon_128x128.png" alt="URL Detail Logo" class="logo">
+            <img src="Images/urldetail-logo.png" alt="URL Detail Logo" class="logo">
             <span class="brand-name">URL Detail</span>
         </div>
     </header>
@@ -18,13 +18,13 @@
     <div class="full-width-hero" style="background-color: #171427;">
         <div class="banner-box">
             <div class="banner-left">
-                <img src="hero-banner-img.jpg" alt="Main Image" class="main-image">
+                <img src="Images/hero-banner-img.jpg" alt="Main Image" class="main-image">
             </div>
             <div class="banner-right">
                 <h2 class="section-header">URL Detail - Secure & Informative Browsing</h2>
                 <p class="slogan">Unveil the true destination of web links with URL Detail. Secure your browsing by previewing URLs before you click.</p>
                 <a href="https://chrome.google.com/webstore/detail/url-detail/your-extension-id" target="_blank" class="chrome-extension-link">
-                    <img src="Google_Chrome_icon.png" alt="Chrome Logo" class="chrome-icon" width="20" height="20">
+                    <img src="Images/Google_Chrome_icon.png" alt="Chrome Logo" class="chrome-icon" width="20" height="20">
                     Get the Chrome Extension
                 </a>                
                 <p class="additional-text">Download now and enhance your browsing experience with URL Detail.</p>
@@ -32,9 +32,29 @@
         </div>
     </div>
 
-    <!-- Next section placeholder -->
-    <div class="next-section">
-        <!-- Next section content goes here -->
+    <div class="features-section-bg">
+        <div class="features-section">
+            <div class="feature-box">
+                <img src="Images/icon1.png" alt="Real-time URL Preview Icon">
+                <h3>Real-time URL Preview</h3>
+                <p>Hover over any link to see the full URL in a discreet popup.</p>
+            </div>
+            <div class="feature-box">
+                <img src="Images/icon2.png" alt="Whitelist Management Icon">
+                <h3>Whitelist Management</h3>
+                <p>Easily manage your trusted sites to bypass previews and streamline your workflow.</p>
+            </div>
+            <div class="feature-box">
+                <img src="Images/icon3.png" alt="Dynamic Content Analysis Icon">
+                <h3>Dynamic Content Analysis</h3>
+                <p>URL Detail isn't just about URLs; it also provides quick insights into the content type you're about to visit.</p>
+            </div>
+            <div class="feature-box">
+                <img src="Images/icon4.png" alt="Seamless Integration Icon">
+                <h3>Seamless Integration</h3>
+                <p>Works quietly in the background, complementing your browsing without interruption.</p>
+            </div>
+        </div>
     </div>
 
     <footer>
