Added privacy policy

--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+        <!-- Google Tag Manager -->
+        <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+        })(window,document,'script','dataLayer','GTM-TFSHZS3M');</script>
+        <!-- End Google Tag Manager -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="/Images/icon16x16.png" type="image/png">
     <title>URL Detail</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+        <!-- Google Tag Manager (noscript) -->
+        <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TFSHZS3M"
+        height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+        <!-- End Google Tag Manager (noscript) -->
     <header>
         <div class="container header-footer-container">
             <img src="Images/urldetail-logo.png" alt="URL Detail Logo" class="logo">
@@ -28,7 +40,7 @@
                     Get the Chrome Extension
                 </a>                
                 <p class="additional-text">Download now and enhance your browsing experience with URL Detail.</p>
-                <p class="no-user-info">URL Detail does not collect user information.</p>
+                <p class="no-user-info">URL Detail Chrome Extension does not collect user information.</p>
             </div>
         </div>
     </div>
@@ -74,6 +86,8 @@
     <footer>
         <div class="container header-footer-container footer-content">
             &copy; <span id="currentYear"></span> URL Detail. All rights reserved.
+            <br>
+            <a href="privacy.html" class="footer-link">Privacy Policy</a>
         </div>
     </footer>
 
