added chrome store link

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="banner-right">
                 <h2 class="section-header">Secure & Informative Browsing</h2>
                 <p class="slogan">Unveil the true destination of web links with URL Detail. Secure your browsing by previewing URLs before you click.</p>
-                <a href="https://chrome.google.com/webstore/detail/url-detail/your-extension-id" target="_blank" class="chrome-extension-link">
+                <a href="https://chromewebstore.google.com/detail/url-detail-link-hover-inf/jkbdbeehaldpgklbjenakknedodhnlde" target="_blank" class="chrome-extension-link">
                     <img src="Images/Google_Chrome_icon.png" alt="Chrome Logo" class="chrome-icon" width="20" height="20">
                     Get the Chrome Extension
                 </a>                
